--- a/views/list.ejs
+++ b/views/list.ejs
@@ -7,8 +7,8 @@
     <button onclick="location.href='/push'">생성하기</button>
   <% if (lists && lists.length) { %>
     <% lists.forEach(list => { %>
-      <p><%= list.id %>&nbsp;&nbsp;제목  : &nbsp;<%= list.title %>&nbsp;&nbsp;내용: &nbsp;<%= list.content %></p>
-      <button>수정</button><button>삭제</button>
+      <p>&nbsp;제목  : &nbsp;<%= list.title %>&nbsp;&nbsp;내용: &nbsp;<%= list.content %></p>
+      <button onclick="location.href='/modify/<%=list.id%>'">수정</button><button onclick="location.href='/delete/<%=list.id%>'">삭제</button>
     <% }); %>
   <% } else { %>
     <p>No lists found.</p>
