--- a/views/modify.ejs
+++ b/views/modify.ejs
@@ -9,8 +9,8 @@
 
 <body>
     <form method="post" action="/patch/<%=paramsId%>">
-        <input type="text" name="title" placeholder="수정할 제목을 입력해 주세요.">
-        <input type="text" name="content" placeholder="수정할 내용을 입력해 주세요.">
+        <input type="text" name="title" placeholder="수정할 제목을 입력해 주세요." value="<%=lists.title%>">
+        <input type="text" name="content" placeholder="수정할 내용을 입력해 주세요." value="<%=lists.content%>">
         <div>
             <button type="submit" id="addTodoList">수정</button>
         </div>
