--- a/views/list.ejs
+++ b/views/list.ejs
@@ -6,6 +6,7 @@
 <body>
   <button onclick="location.href='/push'">생성하기</button>  
   <button onclick="location.href='/login'">로그인</button><button onclick="location.href='/join'">회원가입</button>
+  <button onclick="location.href='/logout'">로그아웃</button>
   <% if (lists && lists.length) { %>
     <% lists.forEach(list => { %>
       <p>&nbsp;&nbsp;제목  : &nbsp;<%= list.title %>&nbsp;&nbsp;내용: &nbsp;<%= list.content %></p>
