--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>로그인</h1>
-    <form method="post" action="/loginInsert">
+    <form method="post" action="/loginToken">
         <input type="text" name="userid" placeholder="아이디를 입력해주세요">
         <input type="text" name="userpassword" placeholder="비밀번호를 입력해주세요">
         <input type="submit" value="로그인">
